# event-processor-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  RFC.md  docker-compose.yml  sample_payload.json
src/: main.rs
src/data/: model.rs
