[package]
name = "event-processor-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
async-std = {version = "1", features = ["attributes"]}
chrono = "0.4"
fluvio = "0.17"
num_cpus = "1.13"
object_store = {version = "0.5.5", features = ["gcp"]}
